--- a/views/bookinstance_delete.pug
+++ b/views/bookinstance_delete.pug
@@ -1,7 +1,6 @@
 extends layout
 
 block content
-
   h1 ID: #{bookinstance._id}
 
   p #[strong Title:]
@@ -23,3 +22,11 @@ block content
     a(href=bookinstance.url+'/delete') Delete Book Instance
   p
     a(href=bookinstance.url+'/update') Update Book Instance
+
+  p Do you really want to delete this book instance?
+
+  form(method='POST' action='')
+    div.form-group
+      input#bookinstanceid.form-control(type='hidden',name='bookinstanceid', required='true', value=bookinstance._id )
+
+    button.btn.btn-primary(type='submit') Delete
